# shadow-runner

./: .gitignore  CLAUDE.md  LICENSE  README.md  cli.py  design_doc.md  main.py  pyproject.toml
HOW_IT_WORKS/: 00_overview.md  01_ci_and_jobs.md  02_dependency_graph.md  03_critical_path.md  04_parallelism.md  05_triage.md  06_shadow_runner.md  07_agent_loop.md  08_pitch.md
data/: shadow.db
outputs/: better-auth_dryrun.txt  candidates.txt  candidates_clean.txt  jsonb_accessor_exec_report.html  madeintandem_jsonb_accessor_pr.md  madeintandem_jsonb_accessor_report.md
scripts/: setup_ollama.sh  verify_ollama.py
src/: pipeline.py  store.py
src/dag/: __init__.py  graph.py
src/ingest/: __init__.py  github.py
src/models/: __init__.py  assemble.py
src/pitch/: __init__.py  pitch.py
src/shadow/: __init__.py  memory.py  observe.py  runner.py
src/triage/: repo_profile_input.py  triage.py
tests/: test_assemble.py  test_dag.py  test_github.py  test_observe.py  test_shadow_runner.py  test_store.py  test_triage.py
triage/: TRIAGE_REPORT.txt  run.py
