[project]
name = "shadow-runner"
version = "0.1.0"
description = "GitHub API ingestion layer for CI workflow, run, and job data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pyyaml",
    "python-dotenv",
    "pydantic>=2.0",
    "networkx",
    "click",
    "ollama",
    "sqlite-utils",
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingest", "src/models"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
